<resources>
    <string name="app_name">Aplikasi-SQLite1</string>
    <string name="tv_app_title">Persistance Using SharedPreferences</string>
    <string name="toolbar_title">Aplikasi SQLite1</string>
    <string name="mi_about">About</string>
    <string name="about_msg">SplashScreen, CRUD BaseAdapter, ListView</string>
    <string name="mi_exit">Exit</string>
    <string name="tv_id">ID</string>
    <string name="tv_name">Name</string>
    <string name="tv_address">Address</string>
    <string name="til_id">ID</string>
    <string name="til_name">Name</string>
    <string name="til_address">Address</string>
    <string name="til_phone">Phone</string>
    <string name="bt_clear">Clear</string>
    <string name="bt_save">Save</string>
    <string name="tv_title">DIGITALENT VSGA 2024</string>
</resources>