<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/tv_id"
        android:text="@string/tv_name"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:text="@string/tv_id"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_id"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:gravity="start"
        android:text="@string/tv_address"
        android:textSize="18sp"
        tools:layout_alignParentStart="true" />
</RelativeLayout>